--- a/package.json
+++ b/package.json
@@ -9,15 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^2.0.14",
+    "@firebase/storage": "^0.12.0",
+    "axios": "^1.6.2",
+    "firebase": "^10.7.1",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.3",
+    "multiparty": "^4.2.3",
+    "next": "14.0.3",
+    "next-auth": "^4.24.5",
+    "nodemailer": "^6.9.7",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.3"
+    "react-sortablejs": "^6.1.4",
+    "react-spinners": "^0.13.8",
+    "react-sweetalert2": "^0.6.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.0.3"
+    "eslint-config-next": "14.0.3",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0"
   }
 }
