--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-sweetalert2": "^0.6.0"
   },
   "devDependencies": {
+    "@types/react": "18.3.3",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
